--- a/charts_flutter/pubspec.yaml
+++ b/charts_flutter/pubspec.yaml
@@ -3,7 +3,7 @@ version: 0.11.0
 description: Material Design charting library for flutter.
 author: Charts Team <charts_flutter@google.com>
 homepage: https://github.com/google/charts
-publish_to: none
+publish_to: 'none'
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
